--- a/TSI_monitor.config
+++ b/TSI_monitor.config
@@ -2,6 +2,6 @@
 <configuration>
 	<botToken_SHA256></botToken_SHA256>
 	<adminID></adminID>
-	<JiraDashboardURL></JiraDashboardURL>
-	<TableCSSSelector></TableCSSSelector>
+	<JiraDashboardURL>https://jira.puls.ru/secure/Dashboard.jspa?selectPageId=15003</JiraDashboardURL>
+	<TableCSSSelector>#qrf-table-view-23015 > table</TableCSSSelector>
 </configuration>
