--- a/TSI_Monitor.csproj
+++ b/TSI_Monitor.csproj
@@ -8,8 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.5.1" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.4" />
+    <PackageReference Include="NLog" Version="5.4.0" />
     <PackageReference Include="Selenium.Support" Version="4.29.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.29.0" />
     <PackageReference Include="SeleniumExtras.WaitHelpers" Version="1.0.2" />
